--- a/ProyectoGAE4Galactic1/Templates/users/login.html
+++ b/ProyectoGAE4Galactic1/Templates/users/login.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login y registro - Galactic Gamer</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
 </head>
 <body>
     <main>
@@ -55,16 +57,24 @@
                     </div>
 
                     <div class="formulario__grupo formulario__grupo-btn-entrar">
-                        <button type="submit" class="formulario__btn">Entrar</button>  
+                        <button type="submit"  class="formulario__btn">Entrar</button>  
                         <br>
                         
                         <p class="formulario__mensaje-bienvenido" id="formulario__mensaje-bienvenido">¡Bienvenido a Galactic Gamer!</p>
                     </div>   
                     {% if messages %}
                             {% for message in messages %}
-                                <div class="alert">
-                                    {{ message }}
-                                </div>
+                                {%if message.tags == 'success' %}
+                                    <div class="alert alert-success">
+                                        {{ message }}
+                                    </div>
+                                {% else %}
+                                    <div class="alert alert-danger">
+                                        
+                                        {{ message }}
+                                        <button type="button" class="close" data-dismiss="alert">x</button>
+                                    </div>
+                                {% endif %}
                             {% endfor %}
                     {% endif %}
                 </form>
@@ -139,6 +149,7 @@
     </main>
     <script src="{% static 'js/validacion.js' %}"></script>
     <script src="{% static 'js/script.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
      
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 </body>
