--- a/ProyectoGAE4Galactic1/Templates/index.html
+++ b/ProyectoGAE4Galactic1/Templates/index.html
@@ -22,36 +22,36 @@
         <nav class="navigation">
             
             <ul >
-                <li><a href="Index.html">Inicio</a></li>
+                <li><a href="{% url 'index' %}">Inicio</a></li>
                 <li><a href="#">Perifericos</a>
                     <ul>
-                        <li><a class="Mouse" href="Perifericos/Mouse.html">Mouse <span>6</span></a></li>
-                        <li><a class="Teclado" href="Perifericos/Teclado.html">Teclado <span>15</span></a></li>
-                        <li><a class="Audifonos" href="Perifericos/Audifonos.html">Audifonos <span>10</span></a></li>
-                        <li><a class="Parlantes" href="Perifericos/Parlantes.html">Parlantes Pc <span>5</span></a></li>
+                        <li><a class="Mouse" href="{% url 'Mouse' %}">Mouse <span>6</span></a></li>
+                        <li><a class="Teclado" href="{% url 'Teclado' %}">Teclado <span>15</span></a></li>
+                        <li><a class="Audifonos" href="{% url 'Audifonos' %}">Audifonos <span>10</span></a></li>
+                        <li><a class="Parlantes" href="{% url 'Parlantes' %}">Parlantes Pc <span>5</span></a></li>
                     </ul>
                 </li>
                 <li><a href="#">Almacenamiento</a>
                     <ul>
-                        <li><a class="SSD" href="Almacenamiento/SSD.html">Disco SSD <span>12</span></a></li>
+                        <li><a class="SSD" href="{% url 'SSD' %}">Disco SSD <span>12</span></a></li>
                         <li><a class="HDD" href="{% url 'HDD' %}">Disco HDD <span>10</span></a></li>
-                        <li><a class="NVME" href="Almacenamiento/NVME.html">NVME <span>13</span></a></li>
-                        <li><a class="USB" href="Almacenamiento/USB.html">Memorias USB <span>8</span></a></li>
+                        <li><a class="NVME" href="{% url 'NVME' %}">NVME <span>13</span></a></li>
+                        <li><a class="USB" href="{% url 'USB' %}">Memorias USB <span>8</span></a></li>
                     </ul>
                 </li>
                 <li><a href="#">Torres</a>
                     <ul>
-                        <li><a class="Fuente" href="Torres/Fuentes.html">Fuente de poder <span>15</span></a></li>
-                        <li><a class="Board" href="Torres/Board.html">Board <span>10</span></a></li>
-                        <li><a class="Procesador" href="Torres/Procesador.html">Procesador <span>5</span></a></li>
-                        <li><a class="Ram" href="Torres/Ram.html">Memoria Ram <span>20</span></a></li>
-                        <li><a class="Graficas" href="Torres/Graficas.html">Tarjetas Graficas <span>50</span></a></li>
-                        <li><a class="Refrigeracion" href="Torres/Refrigeracion.html">Refrigeracion <span>30</span></a></li>
-                        <li><a class="Chasis" href="Torres/Chasis.html">Chasis <span>40</span></a></li>
+                        <li><a class="Fuente" href="{% url 'Fuentes' %}">Fuente de poder <span>15</span></a></li>
+                        <li><a class="Board" href="{% url 'Board' %}">Board <span>10</span></a></li>
+                        <li><a class="Procesador" href="{% url 'Procesador' %}">Procesador <span>5</span></a></li>
+                        <li><a class="Ram" href="{% url 'Ram' %}">Memoria Ram <span>20</span></a></li>
+                        <li><a class="Graficas" href="{% url 'Graficas' %}">Tarjetas Graficas <span>50</span></a></li>
+                        <li><a class="Refrigeracion" href="{% url 'Refrigeracion' %}">Refrigeracion <span>30</span></a></li>
+                        <li><a class="Chasis" href="{% url 'Chasis' %}">Chasis <span>40</span></a></li>
                     </ul>
                 </li>
-                <li><a href="Portatiles.html">Portatiles</a></li>
-                <li><a href="Monitores.html">Monitores</a></li>
+                <li><a href="{% url 'Portatiles' %}">Portatiles</a></li>
+                <li><a href="{% url 'Monitores' %}">Monitores</a></li>
                 <li><a href="#">Marcas</a>
                     <ul class="">
                         <li><a href="https://www.logitechg.com/es-roam" target="_blank">Logitech <span>60</span></a></li>
