actualizacion portatiles.html

--- a/ProyectoGAE4Galactic1/Templates/Portatiles/Portatiles.html
+++ b/ProyectoGAE4Galactic1/Templates/Portatiles/Portatiles.html
@@ -61,12 +61,8 @@
                         <li><a href="https://www.intel.com/content/www/us/en/homepage.html" target="_blank">Intel </a></li>
                     </ul>
                 </li>
-                <li>
-                <a href="" class="btn btn-succes">
-                <i class="bi bi-cart-fill me-2"></i> Carrito<span id="num_cart" class="badge bg-secondary"></span>
-                </a>
-                </li>
-
+                <li><a href="{% url 'login' %}"><img class="usuario" src="../static/img/usuario.svg" alt="usuario"></a></li>
+                
 
             </ul>
         </nav>
