producto en index

--- a/ProyectoGAE4Galactic1/static/css/a.css
+++ b/ProyectoGAE4Galactic1/static/css/a.css
@@ -399,7 +399,7 @@ article{
 .destacados-2{
   height: 600px;
   position: relative;
-  top: 530px;
+  top: 10px;
   padding-right: 1500px;
 }
 
@@ -430,11 +430,21 @@ article{
     margin-bottom: 20px; /* Espacio entre filas de productos */
 }
 
-.Whatsapp{
-   position: absolute;
+.PQRS{
+   position: fixed;
 bottom: 0;
 right: 0;
 padding: 10px;
+width: 20%;
 }
 
+@media (max-width: 768px) {
+   .PQRS {
+       width: 30%; /* Ajusta el ancho relativo para pantallas más pequeñas si es necesario */
+   }
+}
+
+h1{
+   text-align: center;
+}
 
