--- a/ProyectoGAE4Galactic1/Templates/carrito.html
+++ b/ProyectoGAE4Galactic1/Templates/carrito.html
@@ -64,62 +64,9 @@
                     </ul>
                 </li>
                 <li><a href="{% url 'login' %}"><img class="usuario" src="../static/img/usuario.svg" alt="usuario"></a></li>
-                <li> <a href="{% url 'carrito' %}">Mi Carrito <span class="fas fa-shopping-cart"></span> </a></li>
             </ul>
         </nav>
     </header>
 
-    <div class="hero"></div>
-
-    <!-- <div class="wrapper">
-        <i id="left" class="fa-solid fa-angle-left"></i>
-        <div class="carousel">
-            <a href="#"><img class="img1"  src="../static/img/Ofertas/Img1.png" alt="img"></a>
-            <a href="#"><img class="img2" src="../static/img/Ofertas/Img2.png" alt="img"></a>
-            <a href="#"><img class="img3" src="../static/img/Ofertas/Img3.png" alt="img"></a>
-            <a href="#"><img class="img4" src="../static/img/Ofertas/img4.jpg" alt="img"></a>
-            <a href="#"><img class="img5" src="../static/img/Ofertas/img5.jpeg" alt="img"></a>
-            <a href="#"><img class="img6" src="../static/img/Ofertas/img6.jpg" alt="img"></a>
-            <a href="#"><img class="img7" src="../static/img/Ofertas/img7.jpg" alt="img"></a>
-        </div>
-        <i id="rigt" class="fa-solid fa-angle-right"></i>
-    </div>-->
-
-    <!--<H2 class="">Destacados</H2>-->
-
-    {% block content %}
-    <h1>{{message}}</h1>
-<div class="destacados">
-    <div class="container-items">
-        <div class="item">
-            {% for core in products %}
-            <div class="col-3 mt-5"></div>
-
-            <!--Producto-->
-            <div class="card h-100">
-
-                {% if core.image%}
-            <figure>
-                <img src="{{core.image.url}}" alt="Imagen del Producto" height="300">
-            </figure>
-                {% endif %}
-
-                <div class="info-product">
-                    <h5>{{core.nombre_producto}}</h5>
-                    <a href="#" class="btn btn-primary"> See more </a>
-                    <button type="submit" class="btn btn-warning">Agregar al carrito</button>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
-</div>
-    {%endblock%}
-    <div class = "PQRS">
-        <a href="{% url 'PQRScliente' %}" target= "_blank"><h5 class="whts">Comentanos tus dudas (PQRS)</h5>
-        </a>
-    </div>
-
-</body>
-</html>
+<H2>Carrito de compras</H2>
 
