--- a/ProyectoGAE4Galactic2/core/templates/products/snippets/product.html
+++ b/ProyectoGAE4Galactic2/core/templates/products/snippets/product.html
@@ -5,6 +5,6 @@
     {% endif %}
     <div class="card-body">
         <h5 class="card-title">{{core.nombre_producto}}</h5>
-        <a href="{%url 'product' core.slug%}" class="btn btn-primary"> See more </a>
+        <a href="{%url 'product' core.slug%}" class="btn btn-primary"> Ver Mas </a>
     </div>
 </div>
