--- a/ProyectoGAE4Galactic2/static/css/a.css
+++ b/ProyectoGAE4Galactic2/static/css/a.css
@@ -5,7 +5,7 @@
   
     font-family: 'Poppins', sans-serif;
     min-height: 100vh;
-    background: #dddddd;
+    background: #ff0000;
     align-items: center;
    
     
