--- a/ProyectoGAE4Galactic2/Templates/Contacto.html
+++ b/ProyectoGAE4Galactic2/Templates/Contacto.html
@@ -1,25 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container mt-4">
-    <!-- Íconos de Redes Sociales -->
+   
     <div class="row">
         <div class="col-md-4 text-center">
             <a href="#" target="_blank">
                 <i class="fab fa-whatsapp fa-3x"></i>
             </a>
-            <p>Número de WhatsApp</p>
+            <p style="color: #CCCCCC;">Número de WhatsApp</p>
         </div>
         <div class="col-md-4 text-center">
             <a href="#" target="_blank">
                 <i class="fas fa-envelope fa-3x"></i>
             </a>
-            <p>Correo Electrónico</p>
+            <p style="color: #CCCCCC;">Correo Electrónico</p>
         </div>
         <div class="col-md-4 text-center">
             <a href="#" target="_blank">
                 <i class="fab fa-facebook fa-3x"></i>
             </a>
-            <p>Dirección de Facebook</p>
+            <p style="color: #CCCCCC;">Dirección de Facebook</p>
         </div>
     </div>
 </div>
