--- a/ProyectoGAE4Galactic2/Templates/index.html
+++ b/ProyectoGAE4Galactic2/Templates/index.html
@@ -1,51 +1,39 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container mt-5">
-  <div id="carouselExampleIndicators" class="carousel slide" style="max-width: 900px; margin: 0 auto;">
-      <!-- Indicadores -->
-      <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-
-      <!-- Imágenes del carrusel -->
-      <div class="carousel-inner">
-          <div class="carousel-item active">
-              <img src="../static/img/Ofertas/Img1.png" alt="Imagen 1" class="d-block w-100" style="height: 300px;">
-          </div>
-          <div class="carousel-item">
-              <img src="../static/img/Ofertas/Img2.png" alt="Imagen 2" class="d-block w-100" style="height: 300px;">
-          </div>
-          <div class="carousel-item">
-              <img src="../static/img/Ofertas/Img3.png" alt="Imagen 3" class="d-block w-100" style="height: 300px;">
-          </div>
+  
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" style="max-width: 900px; margin: 0 auto;">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../static/img/Ofertas/Img1.png" class="d-block w-100" alt="imag1" style="height: 300px;">
       </div>
-
-      <!-- Controles del carrusel -->
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-      </a>
+      <div class="carousel-item">
+        <img src="../static/img/Ofertas/Img2.png" class="d-block w-100" alt="img2" style="height: 300px;">
+      </div>
+      <div class="carousel-item">
+        <img src="../static/img/Ofertas/Img3.png" class="d-block w-100" alt="img3" style="height: 300px;">
+      </div>
+    </div>
   </div>
 </div>
 <br>
 <br>
 
 <div class="container">
-    <h4 class="text-center">{{message}}</h4>
-    {%include 'products/snippets/search.html' %}
-    <div class="container-item row ">
-            {% for object in producto_list %}
-        <div class="col-3 mt-5">
-            {% include 'products/snippets/product.html' with core=object%}
-        </div>
-            {% endfor %}
+  <h4 class="text-center" style="color: #CCCCCC;">{{ message }}</h4>
+
+  <div class="mt-4 mb-3">
+    
+    {% include 'products/snippets/search.html' %}
+</div>
+<h2 class="text-center mb-4" style="color: #CCCCCC;">Productos Destacados</h2>
+<div class="row">
+    {% for object in producto_list %}
+    <div class="col-md-3 col-sm-6 mb-4">
+      
+        {% include 'products/snippets/product.html' with core=object %}
     </div>
+    {% endfor %}
 </div>
 <br>
 <br>
