--- a/ProyectoGAE4Galactic2/Templates/navbar.html
+++ b/ProyectoGAE4Galactic2/Templates/navbar.html
@@ -6,56 +6,46 @@
         <img src="../../../static/img/logo.png" alt="Logo de Galactic Gamer" height="50" width="50">
         Galactic Gamer</a>
 
-    <button type="button" name="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navb">
-        <span class="navbar-toggler-icon"></span> 
+    <button class="navbar-toggler navbar-toggler-right" type="button" name="button" data-bs-toggle="collapse" data-bs-target="#navb" aria-expanded="false" >
+            <span class="navbar-toggler-icon"></span>
     </button>
   
-    <div id="navb" class="navbar-collapse collapse justify-content-center d-flex ">
-        <ul class="nav navbar-nav ml-auto">
-          
-            <li class="navbar-item">
+    <div id="navb" class="collapse navbar-collapse justify-content-md-between justify-content-center">
+        <ul class="navbar-nav">
+            <li class="nav-item">
                 <a href="{% url 'Contactenos' %}" class="nav-link">Contactenos</a>
             </li>
-            <li class="navbar-item">
+            <li class="nav-item">
                 <a href="{% url 'AcercaDe' %}" class="nav-link">Informacion</a>
             </li>
             {% if user.is_authenticated %}
-                <li class="navbar-item">
+                <li class="nav-item">
                     <a href="{% url 'index' %}" class="nav-link">Productos</a>
                 </li>
-                <li class="navbar-item">
+                <li class="nav-item">
                     <a href="{% url 'PQRScliente' %}" class="nav-link">PQRS</a>
                 </li>
-
+            {% endif %}
+        </ul>
+    
+        <ul class="navbar-nav">
+            {% if user.is_authenticated %}
                 <li class="nav-item {% if request.path == cart %}active{% endif %}">
                     <a class="nav-link" href="{{ cart }}">
                         Mi Carrito <span class="fas fa-shopping-cart"></span>
                     </a>
                 </li>
-
-                <li class="nav-item {% if request.path == billing_profiles %}active{% endif %}">
-                    <a class="nav-link" href="{{ billing_profiles }}">
-                        Mis metodos de pago <span class="fab fa-cc-stripe"></span>                    </a>
-                </li>
-
-                <li class="navbar-item">
+                <li class="nav-item">
                     <span class="nav-link"><i class="fas fa-user"></i> {{ user.username }}</span>
                 </li>
-                <li class="navbar-item">
-                    <a href="{% url 'logout' %}" class="nav-link"> Salir <i class="fas fa-sign-out-alt"></i></a>
+                <li class="nav-item">
+                    <a href="{% url 'logout' %}" class="nav-link">Salir <i class="fas fa-sign-out-alt"></i></a>
                 </li>
-              
             {% else %}
-                <li class="navbar-item">
-                    <a href="{% url 'login' %}" class="nav-link">Login</a>
+                <li class="nav-item">
+                    <a href="{% url 'login' %}" class="nav-link">Iniciar Sesión</a>
                 </li>
-              
             {% endif %}
-            
         </ul>
     </div>
 </nav>
-<style>
-
-</style>
-
