--- a/ProyectoGAE4Galactic2/Templates/users/login.html
+++ b/ProyectoGAE4Galactic2/Templates/users/login.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 <div class="container">
+    <div class="logo-container">
+        <img src="{% static 'img/logo.png' %}" alt="Logo de la empresa" class="logo">
+    </div>
     <h2>Iniciar Sesión</h2>
     <form action="#" method="POST">
         {% csrf_token %}
@@ -12,20 +16,17 @@
         <br>
         
         {% if messages %}
-                        {% for message in messages %}
-                            {%if message.tags == 'success' %}
-                                <div class="alert alert-success">
-                                    {{ message }}
-                                </div>
-                            {% else %}
-                                <div class="alert alert-danger">
-                                    
-                                    {{ message }}
-                                    
-                                   
-                                </div>
-                            {% endif %}
-                        {% endfor %}
+            {% for message in messages %}
+                {%if message.tags == 'success' %}
+                    <div class="alert alert-success">
+                        {{ message }}
+                    </div>
+                {% else %}
+                    <div class="alert alert-danger">
+                        {{ message }}
+                    </div>
+                {% endif %}
+            {% endfor %}
         {% endif %}
         <button type="submit">Iniciar Sesión</button>
     </form>
@@ -42,7 +43,7 @@
 }
 
 .container {
-    margin-top: 170px;
+    margin-top: 50px;
     font-family: Arial, sans-serif;
     background-color: #fff;
     border-radius: 8px;
@@ -51,6 +52,14 @@
     text-align: center;
     width: 300px;
 }
+.logo-container {
+        margin-bottom: 20px;
+    }
+
+.logo {
+        width: 100px; /* Ajusta el tamaño de la imagen según sea necesario */
+        height: auto;
+    }
 
 h2 {
     color: #333;
