--- a/ProyectoGAE4Galactic2/carts/templates/carts/snippets/add.html
+++ b/ProyectoGAE4Galactic2/carts/templates/carts/snippets/add.html
@@ -1,34 +1,33 @@
 <form action="{% url 'carts:add' %}" method="post">
     {% csrf_token %}
     <input type="hidden" name="producto_id" value="{{ producto.id }}">
-    <div class="">
-        <button type="button" class="btn btn-info d-inline" id="remove">-</button>
-        <input type="number" value="1" class="form-control col-sm-1 d-inline" id="quantity" name="quantity" readonly>
-        <button type="button" class="btn btn-info" id="add">+</button>
+    
+    <div class="input-group mb-3">
+        <button type="button" class="btn btn-outline-info" id="remove">-</button>
+        <input type="number" value="1" class="form-control text-center" id="quantity" name="quantity" readonly>
+        <button type="button" class="btn btn-outline-info" id="add">+</button>
     </div>
 
     <div class="mt-2">
-        <button type="submit" class="btn btn-warning">Agregar al carrito</button>
+        <button type="submit" class="btn btn-warning btn-block">Agregar al carrito</button>
     </div>
 </form>
 
 <script>
-    
-    const add = document.getElementById('add')
-    const remove = document.getElementById('remove')
-    const quantity = document.getElementById('quantity')
+    const add = document.getElementById('add');
+    const remove = document.getElementById('remove');
+    const quantity = document.getElementById('quantity');
 
-    add.addEventListener('click', function(){
-        quantity.value = parseInt(quantity.value) + 1
-    })
+    add.addEventListener('click', function() {
+        quantity.value = parseInt(quantity.value) + 1;
+    });
 
-    remove.addEventListener('click', function(){
-        value = parseInt(quantity.value)
+    remove.addEventListener('click', function() {
+        value = parseInt(quantity.value);
 
-        if(value != 1){
-            value = value -1
+        if (value != 1) {
+            value = value - 1;
         }
-        quantity.value = value
-        })
-
+        quantity.value = value;
+    });
 </script>
