--- a/ProyectoGAE4Galactic2/carts/templates/carts/snippets/remove.html
+++ b/ProyectoGAE4Galactic2/carts/templates/carts/snippets/remove.html
@@ -2,5 +2,7 @@
     {% csrf_token %}
     
     <input type="hidden" name="producto_id" value="{{ producto.id }}">
-    <button type="submit" class="btn btn-link text-danger" style='padding:0px'>Eliminar</button>
+    <button type="submit" class="btn btn-link text-danger" style="padding: 0;">
+        <i class="fas fa-trash-alt"></i> <!-- Icono de eliminación -->
+    </button>
 </form>
