--- a/ProyectoGAE4Galactic2/core/templates/products/product.html
+++ b/ProyectoGAE4Galactic2/core/templates/products/product.html
@@ -1,25 +1,21 @@
-{%extends 'base.html'%}
+{% extends 'base.html' %}
 
-{%block content%}
-<div class="container">
-    <div class="col-3">
-        {% if producto.image %}
-        <img src="{{producto.image.url}}" alt="imagen del producto" width="200" height="200">
-        {% endif %}
-    </div>
-    <div class="col">
-        <div class="h1">
-            <h1>{{producto.nombre_producto}}</h1>
+{% block content %}
+<div class="container mt-5 bg-white p-4 rounded">
+    <div class="row">
+        <div class="col-md-3">
+            {% if producto.image %}
+            <img src="{{ producto.image.url }}" alt="Imagen del producto" class="img-fluid">
+            {% endif %}
         </div>
-        <div class="h5">
-            <h5>Precio: <spanc class="text-danger">${{producto.PrecioProducto}}</spanc></h5>
-        </div>
-        <div class="">
-            <p>{{producto.Descripcion_Producto}}</p>
-        </div>
-        <div class="">
-            {% include 'carts/snippets/add.html'%}
+        <div class="col-md-9">
+            <h1>{{ producto.nombre_producto }}</h1>
+            <h5 class="text-danger">Precio: ${{ producto.PrecioProducto }}</h5>
+            <p>{{ producto.Descripcion_Producto }}</p>
+            <div class="mt-3">
+                {% include 'carts/snippets/add.html' %}
+            </div>
         </div>
     </div>
 </div>
-{%endblock%}
+{% endblock %}
