--- a/ProyectoGAE4Galactic2/Templates/AcercaN.html
+++ b/ProyectoGAE4Galactic2/Templates/AcercaN.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <!-- Encabezado de la Página -->
-<section style="background: linear-gradient(to right, #00FFFF, #6f00ff); opacity: 0.8;" class="text-center py-5">
+<section style="background: linear-gradient(to right, #259FB8, #6f00ff); opacity: 0.8;" class="text-center py-5">
     <div class="container">
         <h1 class="display-4 text-light">Acerca de Nosotros</h1>
         <p class="lead text-light">Descubre quiénes somos y nuestra historia.</p>
