--- a/ProyectoGAE4Galactic2/Templates/users/register.html
+++ b/ProyectoGAE4Galactic2/Templates/users/register.html
@@ -5,15 +5,31 @@
     <form action="" method="POST">
         {% csrf_token %}
         {% for field in form %}
-            {{ field.label_tag }}
-            {{ field }}
-            {% if field.errors %}
-                {{field.errors}}
-            {% endif %} 
+            <div class="mb-3">
+                {{ field.label_tag }}
+                {{ field }}
+                {% if field.errors %}
+                    <div class="alert alert-danger my-2" role="alert">
+                        {% for error in field.errors %}
+                            {{ error }}
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            </div>
         {% endfor %}
-        <button type="submit">Registrarse</button>
+        <button type="submit" class="btn btn-primary" style="background-color: #259FB8;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        padding: 10px 20px;
+        font-size: 16px;
+        margin-top: 15px;
+        cursor: pointer;">Registrarse</button>
     </form>
-    <p>¿Ya tienes una cuenta? <a href="{% url 'login' %}">Iniciar Sesión</a></p>
+    <p style="   font-size: 14px;
+    margin-top: 10px;">¿Ya tienes una cuenta? <a href="{% url 'login' %}"  style=" 
+    text-decoration: none;
+    font-weight: bold;">Iniciar Sesión</a></p>
 </div>
 <style>
     body {
@@ -64,31 +80,13 @@ input[type="password"] {
     font-size: 16px;
 }
 
-button {
-    background-color: #259FB8;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
-    font-size: 16px;
-    margin-top: 15px;
-    cursor: pointer;
-}
+
 
 button:hover {
     background-color: #555;
 }
 
-p {
-    font-size: 14px;
-    margin-top: 10px;
-}
 
-a {
-    color: #333;
-    text-decoration: none;
-    font-weight: bold;
-}
 
 a:hover {
     text-decoration: none;
@@ -117,6 +115,15 @@ input[type="email"] {
     margin: 5px 0; /* Reduce el margen vertical entre los mensajes */
     padding: 5px 10px; /* Reduce el espacio interno de los mensajes */
     font-size: 14px; /* Reduce el tamaño de fuente de los mensajes */
+}
+.alert-danger {
+    border-color: #dc3545; /* Cambia el color del borde a rojo */
+    background-color: #f8d7da; /* Cambia el color de fondo a rojo claro */
+    color: #721c24; /* Cambia el color del texto a un tono oscuro */
+    padding: 0.75rem 1.25rem; /* Ajusta el relleno para hacerlo más visible */
+    border-radius: 0.25rem; /* Agrega bordes redondeados */
+    font-size: 14px; /* Ajusta el tamaño de fuente */
+    margin-top: 5px; /* Agrega un espacio superior para separarlo del campo anterior */
 }
 
 </style>
