--- a/ProyectoGAE4Galactic2/carts/templates/carts/add.html
+++ b/ProyectoGAE4Galactic2/carts/templates/carts/add.html
@@ -22,7 +22,7 @@
                 Precio: {{ producto.PrecioProducto | price_format }}
             </div>
             <div class="mt-4">
-                <a href="{% url 'carts:cart' %}" class="btn btn-info mr-3">Ver Carrito</a>
+                <a href="{% url 'carts:cart' %}" class="btn btn-info mr-3" style="color: #fff;" >Ver Carrito</a>
                 <a href="{% url 'index' %}" class="btn btn-outline-primary">Seguir Comprando</a>
             </div>
         </div>
