--- a/ProyectoGAE4Galactic2/Templates/PQRS/ActualizarPQRS/actualizarPQRS.html
+++ b/ProyectoGAE4Galactic2/Templates/PQRS/ActualizarPQRS/actualizarPQRS.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container">
+<div class="container" style="opacity: 0.9;">
     <div class="row justify-content-center mt-5">
         <div class="col-md-6">
             <div class="card">
