--- a/ProyectoGAE4Galactic2/Templates/PQRS/IndexPQRS.html
+++ b/ProyectoGAE4Galactic2/Templates/PQRS/IndexPQRS.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="container">
+<div class="container" style="opacity: 0.9;">
     <div class="row justify-content-center mt-5">
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header" style="background-color: #259FB8; color: white;">
+                 
                     <h2 class="text-center">Coméntanos</h2>
                     <p class="text-center">Registra aquí tu Pregunta, Queja, Reclamo o Sugerencia</p>
                 </div>
