--- a/ProyectoGAE4Galactic2/Templates/navbar.html
+++ b/ProyectoGAE4Galactic2/Templates/navbar.html
@@ -42,9 +42,11 @@
                     <a href="{% url 'logout' %}" class="nav-link">Salir <i class="fas fa-sign-out-alt"></i></a>
                 </li>
             {% else %}
-                <li class="nav-item">
-                    <a href="{% url 'login' %}" class="nav-link">Iniciar Sesión</a>
-                </li>
+            <li class="nav-item">
+                <a href="{% url 'login' %}" class="nav-link">
+                    <i class="fas fa-lock"></i> Iniciar Sesión
+                </a>
+            </li>
             {% endif %}
         </ul>
     </div>
