--- a/ProyectoGAE4Galactic2/carts/templates/carts/snippets/add.html
+++ b/ProyectoGAE4Galactic2/carts/templates/carts/snippets/add.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="mt-2">
-        <button type="submit" class="btn btn-warning btn-block">Agregar al carrito</button>
+        <button type="submit" class="btn btn-info mr-3" style="color: #fff;" >Agregar al carrito</button>
     </div>
 </form>
 
