--- a/ProyectoGAE4Galactic2/core/templates/products/snippets/search.html
+++ b/ProyectoGAE4Galactic2/core/templates/products/snippets/search.html
@@ -2,7 +2,7 @@
     <div class="input-group">
         <input type="text" name="q" value="{{ query }}" class="form-control" placeholder="Buscar">
         <div class="input-group-append">
-            <input type="submit" name="" value="Buscar" class="btn btn-primary">
+            <input type="submit" name="" value="Buscar" class="btn btn-info mr-3" style="color: #fff;">
         </div>
     </div>
 </form>
